--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"issues": "https://forge.typo3.org/projects/extension-l10nmgr/issues"
 	},
 	"require": {
-		"typo3/cms-core": "^7.6.0"
+		"typo3/cms-core": "^7.6",
+		"sjbr/static-info-tables": "^6.5"
 	},
 	"autoload": {
 		"psr-4": {
