--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
 		}
 	},
 	"replace": {
-		"l10nmgr": "self.version",
+		"localizationteam/l10nmgr": "self.version",
 		"typo3-ter/l10nmgr": "self.version"
 	}
 }
