--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,38 @@
 {
-  "name": "localizationteam/l10nmgr",
-  "type": "typo3-cms-extension",
-  "version" : "9.2.1",
-  "description": "Module for managing localization import and export",
-  "homepage": "https://docs.typo3.org/typo3cms/extensions/l10nmgr/",
-  "license": [
-    "GPL-2.0-or-later"
-  ],
-  "keywords": [
-    "TYPO3 CMS",
-    "L10N",
-    "I18N",
-    "T9N",
-    "localization",
-    "translation",
-    "internationalization",
-    "language"
-  ],
-  "support": {
-    "issues": "https://forge.typo3.org/projects/extension-l10nmgr/issues"
-  },
-  "require": {
-    "sjbr/static-info-tables": "^6.7.0",
-    "typo3/cms-core": "^9.5.0",
-    "typo3/cms-lang": "^9.5.0",
-    "typo3/cms-scheduler": "^9.5.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Localizationteam\\L10nmgr\\": "Classes"
-    }
-  },
-  "replace": {
-    "localizationteam/l10nmgr": "self.version",
-    "typo3-ter/l10nmgr": "self.version"
-  }
+	"name": "localizationteam/l10nmgr",
+	"type": "typo3-cms-extension",
+	"version": "9.2.1",
+	"description": "Module for managing localization import and export",
+	"homepage": "https://docs.typo3.org/typo3cms/extensions/l10nmgr/",
+	"license": [
+		"GPL-2.0-or-later"
+	],
+	"keywords": [
+		"TYPO3 CMS",
+		"L10N",
+		"I18N",
+		"T9N",
+		"localization",
+		"translation",
+		"internationalization",
+		"language"
+	],
+	"support": {
+		"issues": "https://forge.typo3.org/projects/extension-l10nmgr/issues"
+	},
+	"require": {
+		"sjbr/static-info-tables": "*",
+		"typo3/cms-core": "^9.5.0",
+		"typo3/cms-lang": "^9.5.0",
+		"typo3/cms-scheduler": "^9.5.0"
+	},
+	"autoload": {
+		"psr-4": {
+			"Localizationteam\\L10nmgr\\": "Classes"
+		}
+	},
+	"replace": {
+		"localizationteam/l10nmgr": "self.version",
+		"typo3-ter/l10nmgr": "self.version"
+	}
 }
