[TASK] Raise version to 9.4.0

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "localizationteam/l10nmgr",
 	"type": "typo3-cms-extension",
-	"version": "9.3.1",
+	"version": "9.4.0",
 	"description": "Module for managing localization import and export",
 	"homepage": "https://docs.typo3.org/typo3cms/extensions/l10nmgr/",
 	"license": [
@@ -34,5 +34,10 @@
 	"replace": {
 		"localizationteam/l10nmgr": "self.version",
 		"typo3-ter/l10nmgr": "self.version"
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "l10nmgr"
+		}
 	}
 }
