[TASK] Raise version to 8.8.0

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "localizationteam/l10nmgr",
 	"type": "typo3-cms-extension",
-	"version" : "8.7.0",
+	"version" : "8.8.0",
 	"description": "Module for managing localization import and export",
 	"homepage": "https://docs.typo3.org/typo3cms/extensions/l10nmgr/",
 	"license": ["GPL-2.0-or-later"],
@@ -21,5 +21,10 @@
 	"replace": {
 		"localizationteam/l10nmgr": "self.version",
 		"typo3-ter/l10nmgr": "self.version"
+	},
+	"extra": {
+		"typo3/cms": {
+			"extension-key": "localizer"
+		}
 	}
 }
