[TASK] Improve the CI handling
- Move the vendor folder into `.Build/` directory
- Move the PHP-CS-Fixer config file to `Configuration/` folder.
- Move the PHP-CS-Fixer command to composer scripts


(cherry picked from commit 9c89312e8d3a18fc2a194a99502172a236148ef3)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,27 @@
 stages:
   - lint
 
+# Speed up builds
+cache:
+  key: $CI_BUILD_REF_NAME
+  paths:
+    - .Build/vendor
+    - public
+
+default:
+  image: edbizarro/gitlab-ci-pipeline-php:7.4-alpine
+
+php-lint:
+  stage: lint
+  script:
+    - composer run ci:php:lint
+  rules:
+    - allow_failure: false
+
 php-cs-fixer:
-  image: composer:2.1
   stage: lint
   before_script:
     - export COMPOSER_ALLOW_SUPERUSER=1
-    - export COMPOSER_CACHE_DIR=/cache/composer
-    - export COMPOSER_NO_INTERACTION=1
-    - composer req --ignore-platform-reqs --update-no-dev friendsofphp/php-cs-fixer ^3.0
+    - composer install --prefer-dist --no-ansi --no-interaction --no-progress
   script:
-    - ./vendor/bin/php-cs-fixer fix --dry-run
+    - composer run ci:php:fixer
