--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "localizationteam/l10nmgr",
   "type": "typo3-cms-extension",
-  "version" : "10.1.2",
+  "version" : "10.2.0",
   "description": "Module for managing localization import and export",
   "homepage": "https://docs.typo3.org/typo3cms/extensions/l10nmgr/",
   "license": [
@@ -21,12 +21,14 @@
     "issues": "https://forge.typo3.org/projects/extension-l10nmgr/issues"
   },
   "require": {
-    "typo3/cms-core": "^10.0.0",
-    "typo3/cms-lang": "^10.0.0",
-    "typo3/cms-scheduler": "^10.0.0"
+    "typo3/cms-core": "^10.4",
+    "typo3/cms-backend": "^10.4",
+    "typo3/cms-lang": "^10.4",
+    "typo3/cms-scheduler": "^10.4"
   },
   "require-dev": {
- 		"friendsofphp/php-cs-fixer": "^3.1.0"
+    "friendsofphp/php-cs-fixer": "^3.1.0",
+    "phpstan/phpstan": "^1.1"
   },
   "autoload": {
     "psr-4": {
@@ -44,7 +46,9 @@
   "scripts": {
     "php:fix": ".Build/vendor/bin/php-cs-fixer --config=Configuration/php-cs-fixer.php fix Classes Tests",
     "ci:php:lint": "find *.php Classes Configuration Tests -name '*.php' -print0 | xargs -0 -n 1 -P 4 php -l",
-    "ci:php:fixer": ".Build/vendor/bin/php-cs-fixer --config=Configuration/php-cs-fixer.php fix --dry-run -v --show-progress=dots Classes Configuration Tests"
+    "ci:php:fixer": ".Build/vendor/bin/php-cs-fixer --config=Configuration/php-cs-fixer.php fix --dry-run -v --show-progress=dots Classes Configuration Tests",
+    "ci:php:stan": ".Build/vendor/bin/phpstan --no-progress",
+    "phpstan:baseline": ".Build/vendor/bin/phpstan  --generate-baseline=phpstan-baseline.neon"
   },
   "extra": {
     "typo3/cms": {
