--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -21,12 +21,7 @@ parameters:
 			path: Classes/Controller/Cm2.php
 
 		-
-			message: "#^Access to an undefined property TYPO3\\\\CMS\\\\Backend\\\\Template\\\\ModuleTemplate\\:\\:\\$backPath\\.$#"
-			count: 1
-			path: Classes/Controller/ConfigurationManager.php
-
-		-
-			message: "#^Access to an undefined property TYPO3\\\\CMS\\\\Backend\\\\Template\\\\ModuleTemplate\\:\\:\\$form\\.$#"
+			message: "#^Cannot call method fetchAllAssociative\\(\\) on Doctrine\\\\DBAL\\\\Driver\\\\ResultStatement\\|int\\.$#"
 			count: 1
 			path: Classes/Controller/ConfigurationManager.php
 
@@ -56,7 +51,7 @@ parameters:
 			path: Classes/View/AbstractExportView.php
 
 		-
-			message: "#^Access to an undefined property TYPO3\\\\CMS\\\\Backend\\\\Template\\\\DocumentTemplate\\:\\:\\$backPath\\.$#"
+			message: "#^Access to an undefined property TYPO3\\\\CMS\\\\Backend\\\\Template\\\\ModuleTemplate\\:\\:\\$backPath\\.$#"
 			count: 1
 			path: Classes/View/L10nHtmlListView.php
 
